Adding my bins/aliases and tweaking a few files

--- a/zsh/config
+++ b/zsh/config
@@ -7,6 +7,9 @@ fi
 export EDITOR='mate_wait'
 export PATH="$HOME/bin:$HOME/.bin:/usr/local/homebrew/bin:/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/local/git/bin:$PATH"
 export MANPATH="/usr/local/man:/usr/local/mysql/man:/usr/local/git/man:$MANPATH"
+export CLICOLOR=1
+
+if [[ -s ~/.rvm/scripts/rvm ]] ; then source ~/.rvm/scripts/rvm ; fi
 
 fpath=(~/.zsh/functions $fpath)
 
