--- a/zsh/config
+++ b/zsh/config
@@ -1,7 +1,9 @@
-export EDITOR='vim'
+export EDITOR='mvim -f'
 export PATH="$HOME/bin:$HOME/.bin:/usr/local/homebrew/bin:/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/local/git/bin:$PATH"
 export MANPATH="/usr/local/man:/usr/local/mysql/man:/usr/local/git/man:$MANPATH"
 export CLICOLOR=1
+
+export VIM_APP_DIR="$HOME/Dropbox/Applications"
 
 if [[ -s ~/.rvm/scripts/rvm ]] ; then source ~/.rvm/scripts/rvm ; fi
 
