Updating Janus; Setting editor to vim;

--- a/zsh/config
+++ b/zsh/config
@@ -1,11 +1,11 @@
-export EDITOR='mvim -f'
-export PATH="$HOME/bin:$HOME/.bin:/usr/local/homebrew/bin:/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/local/git/bin:$PATH"
+export EDITOR='vim'
+export VIM_APP_DIR=/usr/local/Cellar/macvim/7.3-57
+export PATH="$HOME/bin:$HOME/.bin:$VIM_APP_DIR/bin:$VIM_APP_DIR/MacVim.app/Contents/MacOS:/usr/local/homebrew/bin:/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/local/git/bin:$PATH"
 export MANPATH="/usr/local/man:/usr/local/mysql/man:/usr/local/git/man:$MANPATH"
 export CLICOLOR=1
 
-export VIM_APP_DIR="$HOME/Dropbox/Applications"
 
-if [[ -s ~/.rvm/scripts/rvm ]] ; then source ~/.rvm/scripts/rvm ; fi
+[[ -s ~/.rvm/scripts/rvm ]] && source ~/.rvm/scripts/rvm
 
 fpath=(~/.zsh/functions $fpath)
 
