--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 vim/.netrwhist
 vim/.VimballRecord
+zsh/config.private
+gem/credentials
 bash_history
 ec2
 gitconfig
 ssh
 heroku
 gem/credentials
+
