Setting zshell to default term for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
+set-option -g default-command /usr/local/bin/zsh
+set-option -g default-shell /usr/local/bin/zsh
 unbind %
 bind | split-window -h
 bind - split-window -v
-set -g default-command /bin/zsh
-set -g default-shell /bin/zsh
 
