--- a/zsh/config
+++ b/zsh/config
@@ -17,16 +17,15 @@ HISTFILE=$HOME/.zsh_history
 HISTSIZE=10000
 SAVEHIST=10000
 
-setopt hist_ignore_dups # ignore duplication command history list
-setopt share_history # share command history data
-
-setopt hist_verify
-setopt inc_append_history
+setopt append_history
 setopt extended_history
 setopt hist_expire_dups_first
+setopt hist_ignore_dups # ignore duplication command history list
 setopt hist_ignore_space
-setopt SHARE_HISTORY
-setopt APPEND_HISTORY
+setopt hist_reduce_blanks
+setopt hist_verify
+setopt inc_append_history
+setopt share_history # share command history data
 
 REPORTTIME=10 # print elapsed time when more than 10 seconds
 
@@ -35,18 +34,10 @@ setopt NO_HUP
 setopt NO_LIST_BEEP
 setopt LOCAL_OPTIONS # allow functions to have local options
 setopt LOCAL_TRAPS # allow functions to have local traps
-setopt HIST_VERIFY
-setopt SHARE_HISTORY # share history between sessions ???
-setopt EXTENDED_HISTORY # add timestamps to history
 setopt PROMPT_SUBST
 setopt CORRECT
 setopt COMPLETE_IN_WORD
 setopt IGNORE_EOF
-
-setopt APPEND_HISTORY # adds history
-setopt INC_APPEND_HISTORY SHARE_HISTORY  # adds history incrementally and share it across sessions
-setopt HIST_IGNORE_ALL_DUPS  # don't record dupes in history
-setopt HIST_REDUCE_BLANKS
 
 zle -N newtab
 
