--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
-set-option -g default-command /usr/local/bin/zsh
-set-option -g default-shell /usr/local/bin/zsh
+set-option -g default-command "reattach-to-user-namespace -l /bin/zsh"
+#set-option -g default-shell /bin/zsh
+set -g default-terminal "xterm-256color"
 unbind %
 bind | split-window -h
 bind - split-window -v
