--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
-set-option -g default-command "reattach-to-user-namespace -l /bin/zsh"
-#set-option -g default-shell /bin/zsh
+set-option -g default-shell /bin/zsh
+set-option -g default-command "hash reattach-to-user-namespace 1>/dev/null 2>&1 && reattach-to-user-namespace -l /bin/zsh || /bin/zsh"
 set -g default-terminal "xterm-256color"
 unbind %
 bind | split-window -h
