Added tmux-mem-cpu-load to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,4 +4,5 @@ set -g default-terminal "xterm-256color"
 unbind %
 bind | split-window -h
 bind - split-window -v
-
+set -g status-interval 2
+set -g status-right "#S #[fg=black,bg=green]#(tmux-mem-cpu-load 2)#[default]"
