--- a/tmux.conf
+++ b/tmux.conf
@@ -5,4 +5,34 @@ unbind %
 bind | split-window -h
 bind - split-window -v
 set -g status-interval 2
-set -g status-right "#S #[fg=black,bg=green]#(tmux-mem-cpu-load 2)#[default]"
+set -g status-right "#S #(tmux-mem-cpu-load 2)#[default]"
+
+#### COLOUR
+
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour2 #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour244
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour4 #cyan
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour4 #cyan
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour4 #cyan
+
