--- a/zsh/config
+++ b/zsh/config
@@ -8,6 +8,9 @@ export TERM=xterm-256color
 [[ -s ~/.rvm/scripts/rvm ]] && source ~/.rvm/scripts/rvm
 [[ -s /etc/profile ]] && source /etc/profile
 
+# Remap Ctrl-S to Ctrl-- for stopping termianl output
+stty stop 
+
 fpath=(~/.zsh/functions $fpath)
 
 autoload -U ~/.zsh/functions/*(:t)
