Typo in tmux ctrl-a syntax (fixed)

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-set -g prefix Ctrl-a
+set -g prefix C-a
 set-option -g default-shell /bin/zsh
 set-option -g default-command "hash reattach-to-user-namespace 1>/dev/null 2>&1 && reattach-to-user-namespace -l /bin/zsh || /bin/zsh"
 set -g default-terminal "xterm-256color"
