--- a/tmux.conf
+++ b/tmux.conf
@@ -1,12 +1,46 @@
+# C-b is not acceptable -- Vim uses it
 set -g prefix C-a
+
+# Set shell to zsh
 set-option -g default-shell /bin/zsh
+
+# Fix pbcopy/pbpaste in Mac OS X (zsh will be launched if reattach-to-user-namespace doesn't exist)
 set-option -g default-command "hash reattach-to-user-namespace 1>/dev/null 2>&1 && reattach-to-user-namespace -l /bin/zsh || /bin/zsh"
+
+# Get some colors up in here
 set -g default-terminal "xterm-256color"
+
+# Use | and - to split the window up
 unbind %
 bind | split-window -h
 bind - split-window -v
+
+# Use tmux-mem-cpu-load as the right side status
 set -g status-interval 2
 set -g status-right "#S #(tmux-mem-cpu-load 2)#[default]"
+
+
+# Allows for faster key repetition
+set -s escape-time 0
+
+# Rather than constraining window size to the maximum size of any client 
+# connected to the *session*, constrain window size to the maximum size of any 
+# client connected to *that window*. Much more reasonable.
+setw -g aggressive-resize on
+
+# Allows us to use C-a a <command> to send commands to a TMUX session inside 
+# another TMUX session
+bind-key a send-prefix
+
+# use the vim motion keys to move between panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# use vim motion keys while in copy mode
+setw -g mode-keys vi
+
 
 #### COLOUR
 
