Setting tmux's buffer history much higher

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,8 @@ bind - split-window -v
 set -g status-interval 2
 set -g status-right "#S #(tmux-mem-cpu-load 2)#[default]"
 
+# Set the history limit higher
+set -g history-limit 50000
 
 # Allows for faster key repetition
 set -s escape-time 0
