--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,3 @@
-# C-b is not acceptable -- Vim uses it
-set -g prefix C-a
-
 # Set shell to zsh
 set-option -g default-shell /bin/zsh
 
@@ -9,6 +6,15 @@ set-option -g default-command "hash reattach-to-user-namespace 1>/dev/null 2>&1 
 
 # Get some colors up in here
 set -g default-terminal "xterm-256color"
+
+# Change the default prefix -- C-b is not acceptable -- Vim uses it
+set -g prefix `
+bind ` last-window
+bind \ send-prefix
+
+# Allow mouse scrolling
+set -g mouse-select-pane on
+setw -g mode-mouse on
 
 # Use | and - to split the window up
 unbind %
@@ -20,29 +26,29 @@ set -g status-interval 2
 set -g status-right "#S #(tmux-mem-cpu-load 2)#[default]"
 
 # Set the history limit higher
-set -g history-limit 50000
+set -g history-limit 500000
 
 # Allows for faster key repetition
 set -s escape-time 0
 
-# Rather than constraining window size to the maximum size of any client 
-# connected to the *session*, constrain window size to the maximum size of any 
+# Rather than constraining window size to the maximum size of any client
+# connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
 setw -g aggressive-resize on
 
-# Allows us to use C-a a <command> to send commands to a TMUX session inside 
-# another TMUX session
-bind-key a send-prefix
-
 # use the vim motion keys to move between panes
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
 
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
 
+# Send tmux buffer to remote host
+bind-key y run '/bin/echo -e "$(tmux show-buffer)\c" | ssh -p 2222 localhost pbcopy'
+bind-key p run 'ssh -p 2222 localhost pbpaste | tmux set-buffer; tmux paste-buffer'
+bind-key P previous-window
 
 #### COLOUR
 
