--- a/tmux.conf
+++ b/tmux.conf
@@ -37,10 +37,10 @@ set -s escape-time 0
 setw -g aggressive-resize on
 
 # use the vim motion keys to move between panes
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
