--- a/tmuxinator/gd.yml
+++ b/tmuxinator/gd.yml
@@ -1,7 +1,8 @@
-# ~/.tmuxinator/sv.yml
+# ~/.tmuxinator/gd.yml
+# you can make as many tabs as you wish...
 
-project_name: sv
-project_root: ~/Code/sportsvault
+project_name: gd
+project_root: ~/Code/guestdoor
 tabs:
   - editor: vim
   - shell: git pull --rebase
