Setting tmux window base to 1; Removing ssh-agent stuff for now

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,9 @@ set-option -g default-shell /bin/zsh
 # Fix pbcopy/pbpaste in Mac OS X (zsh will be launched if reattach-to-user-namespace doesn't exist)
 set-option -g default-command "hash reattach-to-user-namespace 1>/dev/null 2>&1 && reattach-to-user-namespace -l /bin/zsh || /bin/zsh"
 
+# Start window index countat 1 instead of 0
+set-option -g base-index 1
+
 # Get some colors up in here
 set -g default-terminal "xterm-256color"
 
