--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,9 @@ set-option -g default-command "hash reattach-to-user-namespace 1>/dev/null 2>&1 
 # Start window index countat 1 instead of 0
 set-option -g base-index 1
 
+# Highlight window name when their is activity
+setw -g monitor-activity on
+
 # Get some colors up in here
 set -g default-terminal "xterm-256color"
 
