--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,9 @@ set-option -g default-command "hash reattach-to-user-namespace 1>/dev/null 2>&1 
 # Start window index countat 1 instead of 0
 set-option -g base-index 1
 
+# Increase buffer limits kept for back referencing
+set -g buffer-limit 1000
+
 # Highlight window name when their is activity
 setw -g monitor-activity on
 
