--- a/tmux.conf
+++ b/tmux.conf
@@ -25,8 +25,8 @@ bind ` last-window
 bind \ send-prefix
 
 # Allow mouse scrolling
-set -g mouse-select-pane on
-setw -g mode-mouse on
+# set -g mouse-select-pane on
+# setw -g mode-mouse on
 
 # Use | and - to split the window up
 unbind %
@@ -56,6 +56,14 @@ bind l select-pane -R
 
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
+
+# make vi mode more vi like
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
 
 # Send tmux buffer to remote host
 bind-key y run '/bin/echo -e "$(tmux show-buffer)\c" | ssh -p 2222 localhost pbcopy'
