OSTYPE for MLion fix; Paste buffer and Cmd-T fix

--- a/tmux.conf
+++ b/tmux.conf
@@ -35,7 +35,7 @@ bind - split-window -v
 
 # Use tmux-mem-cpu-load as the right side status
 set -g status-interval 2
-set -g status-right "#S #(tmux-mem-cpu-load 2)#[default]"
+set -g status-right "#S #(wemux status_users) #(tmux-mem-cpu-load 2)#[default]"
 
 # Set the history limit higher
 set -g history-limit 500000
