--- a/zsh/config
+++ b/zsh/config
@@ -85,7 +85,7 @@ bindkey "^E" end-of-line
 # handy keybindings
 bindkey "^P" history-search-backward
 bindkey "^Y" accept-and-hold
-bindkey "^N" insert-last-word
+bindkey "^N" history-search-forward
 bindkey -s "^T" "^[Isudo ^[A" # "t" for "toughguy"
 
 # Enable extended globbing
