--- a/zsh/config
+++ b/zsh/config
@@ -1,6 +1,7 @@
 export EDITOR='vim'
 export VIM_APP_DIR=/Applications
 export PATH="$HOME/bin:$HOME/.bin:$VIM_APP_DIR/bin:$VIM_APP_DIR/MacVim.app/Contents/MacOS:/usr/local/homebrew/bin:/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/local/git/bin:$PATH"
+export NODE_PATH="/usr/local/lib/node_modules"
 export MANPATH="/usr/local/man:/usr/local/mysql/man:/usr/local/git/man:$MANPATH"
 export CLICOLOR=1
 export TERM=screen-256color
