--- a/zsh/config
+++ b/zsh/config
@@ -1,6 +1,6 @@
 export EDITOR='vim'
 export VIM_APP_DIR=/Applications
-export PATH="$HOME/bin:$HOME/.bin:$VIM_APP_DIR/bin:$VIM_APP_DIR/MacVim.app/Contents/MacOS:/usr/local/homebrew/bin:/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/local/git/bin:$PATH"
+export PATH="$HOME/bin:$HOME/.bin:$VIM_APP_DIR/bin:$VIM_APP_DIR/MacVim.app/Contents/MacOS:/usr/local/Cellar/ruby/1.9.3-p194/bin:/usr/local/homebrew/bin:/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/local/git/bin:$PATH"
 export NODE_PATH="/usr/local/lib/node_modules"
 export MANPATH="/usr/local/man:/usr/local/mysql/man:/usr/local/git/man:$MANPATH"
 export CLICOLOR=1
@@ -8,7 +8,7 @@ export TERM=screen-256color
 export PAGER=less
 
 # Grab the current SSH agent if there is one
-export SSH_AUTH_SOCK=$(find /tmp/ssh-* -user $(whoami) -name agent\* 2>/dev/null |tail -1)
+export SSH_AUTH_SOCK=$(find '/tmp/ssh-*' -user $(whoami) -name agent\* 2>/dev/null |tail -1)
 # The below needs to be adapted to compensate for forward agents
 #[[ -n $(pgrep -U$UID ssh-agent) ]] && export SSH_AUTH_SOCK=$(find /tmp/ssh-* -user $(whoami) -name agent\* 2>/dev/null |tail -1)
 # Add ssh keys (and start an agent if there isn't one already running)
