Adding ee, git and heroku aliases

--- a/tmux.conf
+++ b/tmux.conf
@@ -35,7 +35,8 @@ bind - split-window -v
 
 # Use tmux-mem-cpu-load as the right side status
 set -g status-interval 2
-set -g status-right "#S #(wemux status_users) #(tmux-mem-cpu-load 2)#[default]"
+# TODO: Need to make these conditionally load:
+#set -g status-right "#S #(wemux status_users) #(tmux-mem-cpu-load 2)#[default]"
 
 # Set the history limit higher
 set -g history-limit 500000
