--- a/zsh/config
+++ b/zsh/config
@@ -16,9 +16,11 @@ export PAGER=less
 
 # Fix SSH_AUTH_SOCK to a predicatable locaiton
 SOCK="/tmp/ssh-agent-$USER-screen"
+# && [ ${SOCK:0:15} != ${SSH_AUTH_SOCK:0:15} ]
 if test $SSH_AUTH_SOCK && [ $SSH_AUTH_SOCK != $SOCK ]
 then
     ln -sf $SSH_AUTH_SOCK $SOCK
+    readlink $SSH_AUTH_SOCK > /dev/null || sudo chmod -R g+rwx $(dirname $SSH_AUTH_SOCK)
     export SSH_AUTH_SOCK=$SOCK
 fi
 
