--- a/tmux.conf
+++ b/tmux.conf
@@ -33,6 +33,11 @@ unbind %
 bind | split-window -h
 bind - split-window -v
 
+# Zoom pane script
+unbind +
+bind + run "if [[ $(tmux list-window) =~ ZOOM ]]; then tmux last-window; tmux swap-pane -s ZOOM.0; tmux kill-window -t ZOOM; else tmux new-window -d -n ZOOM; tmux swap-pane -s ZOOM.0; tmux select-window -t ZOOM;fi"
+
+
 # Use tmux-mem-cpu-load as the right side status
 set -g status-interval 2
 # TODO: Need to make these conditionally load:
@@ -73,30 +78,93 @@ bind-key P previous-window
 
 #### COLOUR
 
+## default statusbar colors
+#set-option -g status-bg colour235 #base02
+#set-option -g status-fg colour2 #yellow
+#set-option -g status-attr default
+
+## default window title colors
+#set-window-option -g window-status-fg colour244
+#set-window-option -g window-status-bg default
+##set-window-option -g window-status-attr dim
+
+## active window title colors
+#set-window-option -g window-status-current-fg colour4 #cyan
+#set-window-option -g window-status-current-bg default
+##set-window-option -g window-status-current-attr bright
+
+## pane border
+#set-option -g pane-border-fg colour235 #base02
+#set-option -g pane-active-border-fg colour240 #base01
+
+## message text
+#set-option -g message-bg colour235 #base02
+#set-option -g message-fg colour4 #cyan
+
+## pane number display
+#set-option -g display-panes-active-colour colour33 #blue
+#set-option -g display-panes-colour colour4 #cyan
+
+#### COLOUR (Solarized dark)
+
 # default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour2 #yellow
+set-option -g status-bg black #base02
+set-option -g status-fg yellow #yellow
 set-option -g status-attr default
 
 # default window title colors
-set-window-option -g window-status-fg colour244
+set-window-option -g window-status-fg brightblue #base0
 set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour4 #cyan
+set-window-option -g window-status-current-fg brightred #orange
 set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-fg black #base02
+set-option -g pane-active-border-fg brightgreen #base01
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour4 #cyan
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
 
 # pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour4 #cyan
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
 
+# clock
+set-window-option -g clock-mode-colour green #green
+
+#### COLOUR (Solarized light)
+
+# default statusbar colors
+#set-option -g status-bg white #base2
+#set-option -g status-fg yellow #yellow
+#set-option -g status-attr default
+
+## default window title colors
+#set-window-option -g window-status-fg brightyellow #base00
+#set-window-option -g window-status-bg default
+##set-window-option -g window-status-attr dim
+
+## active window title colors
+#set-window-option -g window-status-current-fg brightred #orange
+#set-window-option -g window-status-current-bg default
+##set-window-option -g window-status-current-attr bright
+
+## pane border
+#set-option -g pane-border-fg white #base2
+#set-option -g pane-active-border-fg brightcyan #base1
+
+## message text
+#set-option -g message-bg white #base2
+#set-option -g message-fg brightred #orange
+
+## pane number display
+#set-option -g display-panes-active-colour blue #blue
+#set-option -g display-panes-colour brightred #orange
+
+## clock
+#set-window-option -g clock-mode-colour green #green
