--- a/tmux.conf
+++ b/tmux.conf
@@ -42,6 +42,9 @@ bind + run "if [[ $(tmux list-window) =~ ZOOM ]]; then tmux last-window; tmux sw
 set -g status-interval 2
 # TODO: Need to make these conditionally load:
 #set -g status-right "#S #(wemux status_users) #(tmux-mem-cpu-load 2)#[default]"
+set -g status-right-length 75
+set -g status-right "#(cat /proc/loadavg | cut -d \" \" -f 1) | #(free -m|grep \+|awk '{print $3}')MB | %a %m-%d %H:%M #[default]"
+#set -g status-right "#(ssh 127.0.0.1 -p 2222 \"osascript -e 'tell application \\\\\"Spotify\\\\\" to Artist of current track as string' && osascript -e 'tell application \\\\\"Spotify\\\\\" to name of current track as string'\" | tr '\n' '~' | sed 's/~/ - /g' | sed 's/ - $//g') | #(cat /proc/loadavg | cut -d \" \" -f 1) | #(free -m|grep \+|awk '{print $3}')MB | %a %m-%d %H:%M #[default]"
 
 # Set the history limit higher
 set -g history-limit 500000
