--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "janus/vim-slim"]
 	path = janus/vim-slim
 	url = git://github.com/bbommarito/vim-slim.git
+[submodule "janus/vim-slime"]
+	path = janus/vim-slime
+	url = https://github.com/jpalardy/vim-slime.git
