Removed vim-slim

--- a/tmux.conf
+++ b/tmux.conf
@@ -142,7 +142,7 @@ set-window-option -g clock-mode-colour green #green
 
 #### COLOUR (Solarized light)
 
-# default statusbar colors
+## default statusbar colors
 #set-option -g status-bg white #base2
 #set-option -g status-fg yellow #yellow
 #set-option -g status-attr default
