--- a/zsh/config
+++ b/zsh/config
@@ -1,8 +1,7 @@
 export EDITOR='vim'
 export VIM_APP_DIR=/Applications
-export PATH="/usr/local/heroku/bin:$HOME/bin:$HOME/.bin:$VIM_APP_DIR/bin:$VIM_APP_DIR/MacVim.app/Contents/MacOS:/usr/local/Cellar/ruby/1.9.3-p194/bin:/usr/local/homebrew/bin:/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/local/git/bin:$PATH"
+export PATH="/usr/local/heroku/bin:$HOME/bin:$HOME/.bin:$VIM_APP_DIR/bin:$VIM_APP_DIR/MacVim.app/Contents/MacOS:$(cd $(which gem)/..;pwd):/usr/local/homebrew/bin:/usr/local/bin:/usr/local/sbin:$PATH"
 export NODE_PATH="/usr/local/lib/node_modules"
-export MANPATH="/usr/local/man:/usr/local/mysql/man:/usr/local/git/man:$MANPATH"
 export CLICOLOR=1
 export TERM=screen-256color
 export PAGER=less
