--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,9 @@ set -g buffer-limit 1000
 # Highlight window name when their is activity
 setw -g monitor-activity on
 
+# Don't let processes rename your windows
+setw -g automatic-rename off
+
 # Change the default prefix -- C-b is not acceptable -- Vim uses it
 set -g prefix `
 bind ` last-window
