Switching to powerline! Back to solarized dark

--- a/tmux.conf
+++ b/tmux.conf
@@ -38,12 +38,15 @@ unbind +
 bind + run "if [[ $(tmux list-window) =~ ZOOM ]]; then tmux last-window; tmux swap-pane -s ZOOM.0; tmux kill-window -t ZOOM; else tmux new-window -d -n ZOOM; tmux swap-pane -s ZOOM.0; tmux select-window -t ZOOM;fi"
 
 
-# Use tmux-mem-cpu-load as the right side status
+# Use powerline
 set -g status-interval 2
-# TODO: Need to make these conditionally load:
-#set -g status-right "#S #(wemux status_users) #(tmux-mem-cpu-load 2)#[default]"
-set -g status-right-length 75
-set -g status-right "#(cat /proc/loadavg | cut -d \" \" -f 1) | #(free -m|grep \+|awk '{print $3}')MB | %a %m-%d %H:%M #[default]"
+set -g status-utf8 on
+set -g status-left-length 60
+set -g status-right-length 90
+set -g status-left "#(~/.tmux/tmux-powerline/powerline.sh left)"
+set -g status-right "#(~/.tmux/tmux-powerline/powerline.sh right)"
+#set -g status-right "#(cat /proc/loadavg | cut -d \" \" -f 1) | #(free -m|grep \+|awk '{print $3}')MB | %a %m-%d %H:%M #[default]"
+#set -g status-right "#(sysctl -n vm.loadavg | tr -d '{}' | sed -e 's/^ *//g' -e 's/ *$//g') | #((vm_stat|grep ' active'|awk '{print $3}'|tr -d '.')/256)MB | %a %m-%d %H:%M #[default]"
 #set -g status-right "#(ssh 127.0.0.1 -p 2222 \"osascript -e 'tell application \\\\\"Spotify\\\\\" to Artist of current track as string' && osascript -e 'tell application \\\\\"Spotify\\\\\" to name of current track as string'\" | tr '\n' '~' | sed 's/~/ - /g' | sed 's/ - $//g') | #(cat /proc/loadavg | cut -d \" \" -f 1) | #(free -m|grep \+|awk '{print $3}')MB | %a %m-%d %H:%M #[default]"
 
 # Set the history limit higher
@@ -110,45 +113,13 @@ bind-key P previous-window
 
 #### COLOUR (Solarized dark)
 
-## default statusbar colors
-#set-option -g status-bg black #base02
-#set-option -g status-fg yellow #yellow
-#set-option -g status-attr default
-#
-## default window title colors
-#set-window-option -g window-status-fg brightblue #base0
-#set-window-option -g window-status-bg default
-##set-window-option -g window-status-attr dim
-#
-## active window title colors
-#set-window-option -g window-status-current-fg brightred #orange
-#set-window-option -g window-status-current-bg default
-##set-window-option -g window-status-current-attr bright
-#
-## pane border
-#set-option -g pane-border-fg black #base02
-#set-option -g pane-active-border-fg brightgreen #base01
-#
-## message text
-#set-option -g message-bg black #base02
-#set-option -g message-fg brightred #orange
-#
-## pane number display
-#set-option -g display-panes-active-colour blue #blue
-#set-option -g display-panes-colour brightred #orange
-#
-## clock
-#set-window-option -g clock-mode-colour green #green
-
-#### COLOUR (Solarized light)
-
 # default statusbar colors
-set-option -g status-bg white #base2
+set-option -g status-bg black #base02
 set-option -g status-fg yellow #yellow
 set-option -g status-attr default
 
 # default window title colors
-set-window-option -g window-status-fg brightyellow #base00
+set-window-option -g window-status-fg brightblue #base0
 set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
@@ -158,16 +129,48 @@ set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg white #base2
-set-option -g pane-active-border-fg brightcyan #base1
+set-option -g pane-border-fg black #base02
+set-option -g pane-active-border-fg brightgreen #base01
 
 # message text
-set-option -g message-bg white #base2
+set-option -g message-bg black #base02
 set-option -g message-fg brightred #orange
 
 # pane number display
 set-option -g display-panes-active-colour blue #blue
 set-option -g display-panes-colour brightred #orange
+
+# clock
+set-window-option -g clock-mode-colour green #green
+
+#### COLOUR (Solarized light)
+
+# default statusbar colors
+#set-option -g status-bg white #base2
+#set-option -g status-fg yellow #yellow
+#set-option -g status-attr default
+
+## default window title colors
+#set-window-option -g window-status-fg brightyellow #base00
+#set-window-option -g window-status-bg default
+##set-window-option -g window-status-attr dim
+
+## active window title colors
+#set-window-option -g window-status-current-fg brightred #orange
+#set-window-option -g window-status-current-bg default
+##set-window-option -g window-status-current-attr bright
+
+## pane border
+#set-option -g pane-border-fg white #base2
+#set-option -g pane-active-border-fg brightcyan #base1
+
+## message text
+#set-option -g message-bg white #base2
+#set-option -g message-fg brightred #orange
+
+## pane number display
+#set-option -g display-panes-active-colour blue #blue
+#set-option -g display-panes-colour brightred #orange
 
 ## clock
 #set-window-option -g clock-mode-colour green #green
