--- a/config/tmuxinator/gd.yml
+++ b/config/tmuxinator/gd.yml
@@ -3,7 +3,7 @@
 project_name: gd
 project_root: ~/Code/guestdoor
 tabs:
-  - chat: weechat-curses
+  - chat:
   - editor: sleep 8 && vim
   - shell: git remote update; git pull --rebase origin master
   - console/server:
@@ -12,4 +12,4 @@ tabs:
         - sleep 3 && zeus c
         - sleep 3 && zeus s
   - zeus: zeus start
-  - starting: sleep 2; tmux rename-window -t $SESSION:1 chat; tmux set-window-option -t $SESSION:5 monitor-activity off; exit
+  - starting: tmux kill-window -t $SESSION:1; tmux link-window -s 0:1 -t $SESSION:1; sleep 2; tmux set-window-option -t $SESSION:5 monitor-activity off; exit
