Mux is now pair friendly; Add some vim macros
* `gem install mux -v 0.6.0.pre.3` for compatible mux
* Vim macro to align gemfile versions (1 by 1)
* Vim macro to open Github issue for current line (assuming line 2 has
  Github issues URL and first word of line is issue id)
* Ditching chat pane (editor is now pane one) (still need to fix leader in vim)

--- a/config/tmuxinator/qd.yml
+++ b/config/tmuxinator/qd.yml
@@ -2,14 +2,18 @@
 
 project_name: qd
 project_root: ~/Code/quadrantmetrics
+socket_path: /tmp/tmux-pair-session
 tabs:
-  - chat:
   - editor: sleep 8 && vim
   - shell: git remote update origin; git pull --rebase origin
   - console/server:
       layout: even-vertical
       panes:
-        - sleep 3 && zeus c
-        - sleep 3 && zeus s
-  - zeus: zeus start
-  - starting: tmux kill-window -t $SESSION:1; tmux link-window -s 0:1 -t $SESSION:1; sleep 2; tmux set-window-option -t $SESSION:5 monitor-activity off; exit
+        - rails c
+        - rails s
+  - guard/faye:
+      layout: even-vertical
+      panes:
+        - guard
+        - rackup sync.ru -E production
+  - starting: chmod 777 /tmp/tmux-pair-session; tmux set-window-option -t $SESSION:3 monitor-activity off; tmux set-window-option -t $SESSION:4 monitor-activity off; exit
