Odd bug in mux 0.6.0; Need 2 editor tabs to make 1

--- a/config/tmuxinator/bt.yml
+++ b/config/tmuxinator/bt.yml
@@ -5,6 +5,7 @@ project_root: ~/Code/baton
 socket_path: /tmp/tmux-pair-session
 tabs:
   - editor: sleep 8 && vim
+  - editor: sleep 8 && vim
   - shell: git remote update origin; git pull --rebase origin
   - console/server:
       layout: even-vertical
