--- a/config/tmuxinator/bt.yml
+++ b/config/tmuxinator/bt.yml
@@ -10,11 +10,12 @@ tabs:
   - console/server:
       layout: even-vertical
       panes:
-        - rails c
-        - rails s
-  - guard/faye:
+        - zrc
+        - zrs
+  - guard/faye/zeus:
       layout: even-vertical
       panes:
         - guard
         - rackup sync.ru -E production
+        - zs
   - starting: chmod 777 /tmp/tmux-pair-session; tmux set-window-option -t $SESSION:3 monitor-activity off; tmux set-window-option -t $SESSION:4 monitor-activity off; exit
