Resize panes with Vimish motions

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -15,10 +15,22 @@ bind ` last-window           # Double type ` for last window
 bind \ send-prefix           # `\ for a literal `
 
 
-# Use | and - to split the window up
+# Use v and s to split the window up
 unbind %
-bind | split-window -h
-bind - split-window -v
+bind-key v split-window -h
+bind-key s split-window -v
+
+# Use capital vim motion keys for resizing (BIG)
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r H resize-pane -L 5
+bind-key -r L resize-pane -R 5
+
+# Use meta+vim motion keys for resizing
+bind-key -r M-j resize-pane -D
+bind-key -r M-k resize-pane -U
+bind-key -r M-h resize-pane -L
+bind-key -r M-l resize-pane -R
 
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
