Fall back to /usr/bin/zsh if /usr/local/bin/zsh not found

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,7 +1,7 @@
 set-option -g default-shell /usr/local/bin/zsh # Set shell to zsh
 
 # Fix pbcopy/pbpaste in Mac OS X (zsh will be launched if reattach-to-user-namespace doesn't exist)
-set-option -g default-command "hash reattach-to-user-namespace 1>/dev/null 2>&1 && reattach-to-user-namespace -l /usr/local/bin/zsh || /usr/local/bin/zsh"
+set-option -g default-command "hash reattach-to-user-namespace 1>/dev/null 2>&1 && reattach-to-user-namespace -l /usr/local/bin/zsh || /usr/local/bin/zsh 2>/dev/null || /usr/bin/zsh"
 
 set -g base-index 1          # Start window index countat 1 instead of 0
 set -g buffer-limit 1000     # Increase buffer limits kept for back referencing
