--- a/config/tmuxinator/sex.yml
+++ b/config/tmuxinator/sex.yml
@@ -3,8 +3,7 @@
 project_name: sex
 project_root: ~/Code/swagexpert
 socket_path: /tmp/tmux-pair-session
-tabs:
-  - editor: sleep 8 && vim
+windows:
   - editor: sleep 8 && vim
   - shell: git remote update origin; git pull --rebase origin
   - console/server:
