--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -3,16 +3,17 @@ set-option -g default-shell /usr/local/bin/zsh # Set shell to zsh
 # Fix pbcopy/pbpaste in Mac OS X (zsh will be launched if reattach-to-user-namespace doesn't exist)
 set-option -g default-command "hash reattach-to-user-namespace 1>/dev/null 2>&1 && reattach-to-user-namespace -l /usr/local/bin/zsh || /usr/local/bin/zsh 2>/dev/null || /usr/bin/zsh"
 
-set -g base-index 1          # Start window index countat 1 instead of 0
-set -g buffer-limit 1000     # Increase buffer limits kept for back referencing
-set -g history-limit 500000  # Set the history limit higher
-set -s escape-time 0         # Allows for faster key repetition
-set -g prefix `              # Change the default prefix -- C-b is not acceptable -- Vim uses it
-setw -g aggressive-resize on # Agressive window resizing (per window instead of session)
-setw -g monitor-activity on  # Highlight window name when their is activity
-setw -g automatic-rename off # Don't let processes rename your windows
-bind ` last-window           # Double type ` for last window
-bind \ send-prefix           # `\ for a literal `
+set-option -g base-index 1             # Start window index count at 1 instead of 0
+set-window-option -g pane-base-index 1 # Tmuxinator likes 1 based panes too
+set -g buffer-limit 1000               # Increase buffer limits kept for back referencing
+set -g history-limit 500000            # Set the history limit higher
+set -s escape-time 0                   # Allows for faster key repetition
+set -g prefix `                        # Change the default prefix -- C-b is not acceptable -- Vim uses it
+setw -g aggressive-resize on           # Agressive window resizing (per window instead of session)
+setw -g monitor-activity on            # Highlight window name when their is activity
+setw -g automatic-rename off           # Don't let processes rename your windows
+bind ` last-window                     # Double type ` for last window
+bind \ send-prefix                     # `\ for a literal `
 
 
 # Use v and s to split the window up
