--- a/config/tmuxinator/bt.yml
+++ b/config/tmuxinator/bt.yml
@@ -17,4 +17,4 @@ windows:
         - wt guard
         - wt rackup sync.ru -E production
         - wtzs
-  - starting: chmod 777 /tmp/tmux-pair-session; tmux set-window-option -t $SESSION:3 monitor-activity off; tmux set-window-option -t $SESSION:4 monitor-activity off; exit
+  - starting: chmod 777 /tmp/tmux-pair-session; tmux set-window-option -t $SESSION:3 monitor-activity off; tmux set-window-option -t $SESSION:4 monitor-activity off; sleep 2; kr; kz; exit
