--- a/config/tmuxinator/bt.yml
+++ b/config/tmuxinator/bt.yml
@@ -4,7 +4,11 @@ project_name: bt
 project_root: ~/Code/baton
 socket_path: /tmp/tmux-pair-session
 windows:
-  - editor: sleep 8 && vim
+  - editor:
+      layout: 8087,238x60,0,0[238x44,0,0,0,238x15,0,45,5]
+      panes:
+        - vim
+        -
   - shell: git remote update origin; git pull --rebase origin
   - console/server:
       layout: even-vertical
@@ -17,4 +21,4 @@ windows:
         - wt guard
         - wt rackup sync.ru -E production
         - wtzs
-  - starting: chmod 777 /tmp/tmux-pair-session; tmux set-window-option -t $SESSION:3 monitor-activity off; tmux set-window-option -t $SESSION:4 monitor-activity off; sleep 2; kr; kz; exit
+  - starting: chmod 777 /tmp/tmux-pair-session; tmux set-window-option -t $SESSION:3 monitor-activity off; tmux set-window-option -t $SESSION:4 monitor-activity off; sleep 2; kr; kz; exit; exit; exit
