--- a/config/tmuxinator/bt.yml
+++ b/config/tmuxinator/bt.yml
@@ -15,10 +15,10 @@ windows:
       panes:
         - wt zeus c
         - wt zeus s
-  - guard/faye/zeus:
+  - guard/jobs/zeus:
       layout: even-vertical
       panes:
         - wt guard
-        - wt rackup sync.ru -E production
+        - wt rake jobs:work
         - wtzs
   - starting: chmod 777 /tmp/tmux-pair-session; tmux set-window-option -t $SESSION:3 monitor-activity off; tmux set-window-option -t $SESSION:4 monitor-activity off; sleep 2; kr; kz; exit; exit; exit
