--- a/config/tmuxinator/ccm.yml
+++ b/config/tmuxinator/ccm.yml
@@ -10,10 +10,9 @@ windows:
         - vim
         - alloy compile --config platform=ios && tishadow run -p 4444
   - shell: git remote update origin; git pull --rebase origin
-  - console/server/tiapp:
+  - console/server:
       layout: even-vertical
       panes:
         - wt tishadow repl -p 4444
         - wt tishadow server -p 4444
-        - cd ~/Code/tishadowapp && ti build -p iphone
   - starting: chmod 777 /tmp/tmux-pair-session; tmux set-window-option -t $SESSION:3 monitor-activity off; tmux set-window-option -t $SESSION:4 monitor-activity off; sleep 2; kr; kz; exit; exit; exit
