--- a/config/tmuxinator/rails.yml
+++ b/config/tmuxinator/rails.yml
@@ -1,7 +1,7 @@
 # ~/.tmuxinator/rails.yml
 
 project_name: rails
-project_root: $WORKING_DIR
+project_root: .
 socket_path: /tmp/tmux-pair-session
 windows:
   - editor:
