--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,7 +1,7 @@
 set-option -g default-shell /usr/local/bin/zsh # Set shell to zsh
 
 # Fix pbcopy/pbpaste in Mac OS X (zsh will be launched if reattach-to-user-namespace doesn't exist)
-set-option -g default-command "hash reattach-to-user-namespace 1>/dev/null 2>&1 && reattach-to-user-namespace -l /usr/local/bin/zsh || /usr/local/bin/zsh 2>/dev/null || /usr/bin/zsh"
+set-option -g default-command "zsh -c 'command -v reattach-to-user-namespace 1>&- && reattach-to-user-namespace -l zsh' || zsh"
 
 set-option -g base-index 1             # Start window index count at 1 instead of 0
 set-window-option -g pane-base-index 1 # Tmuxinator likes 1 based panes too
