--- a/config/tmuxinator/ti.yml
+++ b/config/tmuxinator/ti.yml
@@ -8,11 +8,12 @@ windows:
       layout: 8087,238x60,0,0[238x44,0,0,0,238x15,0,45,5]
       panes:
         - vim
-        - tis run -p 4444
-  - shell: git remote update origin; git pull --rebase origin
+        - tishadow run -p 4444
+  - shell: ensure_keychain_unlocked_over_ssh; git remote update origin; git pull --rebase origin
   - console/server:
       layout: even-vertical
       panes:
         - wt tishadow repl -p 4444
         - wt tishadow server -p 4444
+
   - starting: chmod 777 /tmp/tmux-pair-session; tmux set-window-option -t $SESSION:3 monitor-activity off; sleep 2; exit
