Remove powerline for tmux-airline

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,3 +1,5 @@
+source ~/.tmuxline.conf
+
 set-option -g default-shell /usr/local/bin/zsh # Set shell to zsh
 
 # Fix pbcopy/pbpaste in Mac OS X (zsh will be launched if reattach-to-user-namespace doesn't exist)
