--- a/config/tmuxline.conf
+++ b/config/tmuxline.conf
@@ -4,20 +4,20 @@
 set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
-set -g message-command-style "fg=colour231,bg=colour31"
+set -g message-command-style "fg=colour7,bg=colour11"
 set -g status-right-style "none"
-set -g pane-active-border-style "fg=colour254"
+set -g pane-active-border-style "fg=colour14"
 set -g status-utf8 "on"
-set -g status-style "bg=colour234,none"
-set -g message-style "fg=colour231,bg=colour31"
-set -g pane-border-style "fg=colour240"
+set -g status-style "bg=colour0,none"
+set -g message-style "fg=colour7,bg=colour11"
+set -g pane-border-style "fg=colour11"
 set -g status-right-length "100"
 set -g status-left-length "100"
 setw -g window-status-activity-attr "none"
-setw -g window-status-activity-style "fg=colour250,bg=colour234,underscore"
+setw -g window-status-activity-style "fg=colour14,bg=colour0,none"
 setw -g window-status-separator ""
-setw -g window-status-style "fg=colour250,bg=colour234,none"
-set -g status-left "#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour236,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] %Y-%m-%d  %H:%M #[fg=colour252,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour252] #h "
-setw -g window-status-format "#[fg=colour244,bg=colour234] #I #[fg=colour250,bg=colour234] #W "
-setw -g window-status-current-format "#[fg=colour234,bg=colour31,nobold,nounderscore,noitalics]#[fg=colour117,bg=colour31] #I #[fg=colour231,bg=colour31,bold] #W #[fg=colour31,bg=colour234,nobold,nounderscore,noitalics]"
+setw -g window-status-style "fg=colour10,bg=colour0,none"
+set -g status-left "#[fg=colour15,bg=colour14,bold] #S #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] %Y-%m-%d  %H:%M #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour14] #h "
+setw -g window-status-format "#[fg=colour10,bg=colour0] #I #[fg=colour10,bg=colour0] #W "
+setw -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] #I #[fg=colour7,bg=colour11] #W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]"
