Add vim-tmux-navigator for switching between vim/tmux panes

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -43,6 +43,22 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# use the Option+h|j|k|l to move between panes
+bind -n M-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys M-h) || tmux select-pane -L"
+bind -n M-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys M-j) || tmux select-pane -D"
+bind -n M-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys M-k) || tmux select-pane -U"
+bind -n M-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys M-l) || tmux select-pane -R"
+
+# Option+z to zoom
+bind -n M-z resize-pane -Z
+
+# Send literal Option+Arrow/h|j|k|l|z
+bind M-h send-keys 'M-h'
+bind M-j send-keys 'M-j'
+bind M-k send-keys 'M-k'
+bind M-l send-keys 'M-l'
+bind M-z send-keys 'M-z'
+
 # make vi mode more vi like
 unbind [
 bind Escape copy-mode
