--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -29,10 +29,10 @@ bind-key -r H resize-pane -L 5
 bind-key -r L resize-pane -R 5
 
 # Use meta+vim motion keys for resizing
-bind-key -r M-j resize-pane -D
-bind-key -r M-k resize-pane -U
-bind-key -r M-h resize-pane -L
-bind-key -r M-l resize-pane -R
+bind-key -r C-j resize-pane -D
+bind-key -r C-k resize-pane -U
+bind-key -r C-h resize-pane -L
+bind-key -r C-l resize-pane -R
 
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
