Add github.com credential and ghi.token to github private example

--- a/config/gitconfig.private.example
+++ b/config/gitconfig.private.example
@@ -3,3 +3,7 @@
   email = ericboehs@gmail.com
 [github]
   user = ericboehs
+[credential "https://github.com"]
+  username = ericboehs
+[ghi]
+  token = abc123
