--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -17,10 +17,12 @@ setw -g automatic-rename off           # Don't let processes rename your windows
 bind ` last-window                     # Double type ` for last window
 bind \ send-prefix                     # `\ for a literal `
 
+# Restore "open new pane/window in current directory" functionality in pre 1.9
+bind c new-window -c "#{pane_current_path}"
+
 # Use v and s to split the window up
-unbind %
-bind-key v split-window -h
-bind-key s split-window -v
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key s split-window -v -c "#{pane_current_path}"
 
 # Use capital vim motion keys for resizing (BIG)
 bind-key -r J resize-pane -D 5
