--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -65,3 +65,6 @@ bind M-z send-keys 'M-z'
 bind Escape copy-mode
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
+
+# Copy to clipper by pressing enter (https://github.com/wincent/clipper)
+bind-key -t vi-copy Enter copy-pipe "nc localhost 2224"
