Make tmux Enter key use rpbcopy instead of nc

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -67,4 +67,4 @@ bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
 # Copy to clipper by pressing enter (https://github.com/wincent/clipper)
-bind-key -t vi-copy Enter copy-pipe "nc localhost 2224"
+bind-key -t vi-copy Enter copy-pipe "~/bin/rpbcopy"
