--- a/config/tmuxline.conf
+++ b/config/tmuxline.conf
@@ -16,6 +16,6 @@ setw -g window-status-activity-style "fg=colour14,bg=colour0,none"
 setw -g window-status-separator ""
 setw -g window-status-style "fg=colour10,bg=colour0,none"
 set -g status-left "#[fg=colour15,bg=colour14,bold] #S #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] #(~/bin/pinginfo) #[fg=colour7,bg=colour11] %a,\ %b\ %-d  %-l:%M:%S%p | #(~/bin/utcdate) #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour14] #h "
+set -g status-right "#[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour14,bg=colour0] #(~/bin/pinginfo) #[fg=colour11]#[fg=colour7,bg=colour11] %a,\ %b\ %-d  %-l:%M:%S%p | #(~/bin/utcdate) #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour14] #h "
 setw -g window-status-format "#[fg=colour10,bg=colour0] #I #[fg=colour10,bg=colour0] #W "
 setw -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] #I #[fg=colour7,bg=colour11] #W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]"
