Add lightline to vim and tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+source-file ~/.tmux/tmuxline.conf
+
 set-option -g base-index 1             # Start window index count at 1 instead of 0
 set-window-option -g pane-base-index 1 # Tmuxinator likes 1 based panes too
 set -g buffer-limit 1000               # Increase buffer limits kept for back referencing
