--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ setw -g automatic-rename off           # Don't let processes rename your windows
 bind ` last-window                     # Double type ` for last window
 bind \ send-prefix                     # `\ for a literal `
 
+# Use 256 colors
+set -g default-terminal "screen-256color"
+
 # Restore "open new pane/window in current directory" functionality in pre 1.9
 bind c new-window -c "#{pane_current_path}"
 
