Add vim-tmux-navigator support
Re-adding tmux-navigator (from 1.0.0) as Alt-h/j/k/l is super handy

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,10 +44,11 @@ bind k select-pane -U
 bind l select-pane -R
 
 # use the Option+h|j|k|l to move between panes
-bind -n M-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys M-h) || tmux select-pane -L"
-bind -n M-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys M-j) || tmux select-pane -D"
-bind -n M-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys M-k) || tmux select-pane -U"
-bind -n M-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys M-l) || tmux select-pane -R"
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n M-h if-shell "$is_vim" "send-keys M-h" "select-pane -L"
+bind -n M-j if-shell "$is_vim" "send-keys M-j" "select-pane -D"
+bind -n M-k if-shell "$is_vim" "send-keys M-k" "select-pane -U"
+bind -n M-l if-shell "$is_vim" "send-keys M-l" "select-pane -R"
 
 # Option+z to zoom
 bind -n M-z resize-pane -Z
