Disable tmux status line updating for el cap bug

--- a/.tmux/tmuxline.conf
+++ b/.tmux/tmuxline.conf
@@ -1,4 +1,4 @@
-set -g status-interval "1"
+set -g status-interval "0" # Tmux on el cap is slow for now; disabling status interval helps
 set -g status-bg "colour238"
 set -g message-command-fg "colour252"
 set -g status-justify "left"
@@ -22,6 +22,8 @@ setw -g window-status-activity-fg "colour117"
 setw -g window-status-separator ""
 setw -g window-status-bg "colour238"
 set -g status-left "#[fg=colour238,bg=colour117] #S #[fg=colour117,bg=colour238,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour240,bg=colour238,nobold,nounderscore,noitalics] #[fg=colour7,bg=colour11] %a,\ %b\ %-d  %-l:%M:%S%p | #(~/bin/utcdate) #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics] #[fg=colour15,bg=colour14] #h "
+# Temporarily remove time while status interval set to 0 (el cap issues)
+# set -g status-right "#[fg=colour240,bg=colour238,nobold,nounderscore,noitalics] #[fg=colour7,bg=colour11] %a,\ %b\ %-d  %-l:%M:%S%p | #(~/bin/utcdate) #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics] #[fg=colour15,bg=colour14] #h "
+set -g status-right "#[fg=colour15,bg=colour14] #h "
 setw -g window-status-format "#[fg=colour248,bg=colour238] #I #[fg=colour248,bg=colour238] #W "
 setw -g window-status-current-format "#[fg=colour238,bg=colour240,nobold,nounderscore,noitalics]#[fg=colour252,bg=colour240] #I #[fg=colour252,bg=colour240] #W #[fg=colour240,bg=colour238,nobold,nounderscore,noitalics]"
