Sync clipboard between vim/tmux and system
cop (per tpope's unimpaired shortcuts) will toggle clipboard syncing on/off in vim

In tmux, `y` now yanks to the system clipboard (use enter to yank but
not copy to system clipboard)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,3 +64,6 @@ bind M-z send-keys 'M-z'
 bind Escape copy-mode
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
+
+# Yank to clipboard
+bind-key -t vi-copy y copy-pipe "pbcopy"
